--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -66,18 +66,43 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 
-.great-idea {
-	padding:20px;
-	align-items: center;
+.great-idea{
+	padding: 0 10%;
+}
 
-	}
-
-nav {
+.top-nav{
 	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: space-around;
+	word-spacing: 25px;
 
+}
+
+.logo{
+	width: auto;
+	height: 8%
+}
+
+.main-heading button {
+margin: 95px;
+font-size: 15px;
+text-align: center;
+border: 2px solid black;
+
+}
+
+.main-img {
+	display: inline-block;
+	width: 350px;
 	}
+
+
+.top-content {
+	width: 900px;
+	border-top: 1px solid black ;
+	margin-top: 20px;
+	display: flex;
+	padding-bottom: 3%;
+}
 
 .top-bar {
 	initial-letter: 40px;
@@ -85,55 +110,16 @@ nav {
 	color: lightgray;
 	}
 
-.logo {
-	display: flex;
-	flex-direction: column;
-	}
-
-	.main-heading {
-		display: flex; 
-		}
-
-.main-heading h1 {
-	padding: 0px;
-	margin: 80px;
-	font-size: 75px;
-	text-align: center;
-	}
-
-.main-heading button {
-	margin: 95px;
-	font-size: 15px;
-	text-align: center;
-	border: 2px solid black;
-	}
-
-.main-img {
-	display: inline-block;
-	width: 350px;
-	}
-
-	.top-content {
-		width: 900px;
-		border-top: 1px solid black ;
-		margin-top: 20px;
-		display: flex;
-	}
-	
-
 
 	.bottom-content {
-		width: 900px;
 		margin-top: 20px;
+		padding-bottom: 10px;
 		border-bottom: 1px solid black;
 		margin-bottom: 40px;
 		display: flex;
-		flex-direction: row;
-		justify-content: start;
-		text-align:justify;
-  		
+		justify-content: space-between;
 
-		
+	
 	}
 
 
