--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -90,9 +90,10 @@ border: 2px solid black;
 
 }
 
+
 .main-img {
-	display: inline-block;
-	width: 350px;
+	display: flex;
+	width: 50px;
 	}
 
 
@@ -109,7 +110,6 @@ border: 2px solid black;
 	margin: 20px;
 	color: lightgray;
 	}
-
 
 	.bottom-content {
 		margin-top: 20px;
