--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -135,6 +135,14 @@ border: 2px solid black;
 
 	/* This is for the second part of the project*/
 
+
+	#great-idea{
+		width: 800px;
+     margin: 0 auto;
+	}
+
+
+
 	#about-header{
 		display: flex;
 		justify-content: space-around;
@@ -152,13 +160,15 @@ border: 2px solid black;
 }	
 
 	.big-section {
-		padding: 10px 10px;
+		padding: 30px;
 		margin: 50px 50 px;
 		column-gap: 15px;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: stretch;
 		text-align: justify;
+		align-content: center;
+		border-bottom: 2px solid black;
 		
 	}
 
@@ -236,7 +246,12 @@ border: 2px solid black;
 	}
 
 	.ending-content{
-		display:inline;
+		padding: 30px;
+		margin: 50px 50 px;
+		column-gap: 15px;
+		justify-content: stretch;
+		text-align: justify;
+		align-content: center;
 	}
 
 
@@ -258,3 +273,9 @@ border: 2px solid black;
 		padding: 10px; 
 		
 	}
+
+	.footer{
+		width: 100%;
+		margin: 0 auto;
+		text-align: center;
+	   }
